--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+added example-weights
+from the stc user fork: https://github.com/stc/ofxColorQuantizer/
+This example can sort colors weighted based on their areas, their order is based on their chroma values.
+
+added example-weights2
+This current fork has another example that can sort by Hue, Saturation, Brightness or the above one.
+It has a gui too to change the number of colors, the sorting type, etc on the fly.
+There's some image loading from url too.
+
+
 
 ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 
