--- a/README
+++ b/README
@@ -4,11 +4,12 @@ This example can sort colors weighted based on their areas, their order is based
 
 added example-weights2
 This current fork has another example that can sort by Hue, Saturation, Brightness or the above one.
-It has a gui too to change the number of colors, the sorting type, etc on the fly.
+It has a gui too to change the number of colors, the sorting type, rebuild when changing number of colors... on the fly.
 There's some image loading from url too.
 
 ![alt text](https://raw.githubusercontent.com/moebiussurfing/ofxColorQuantizer/master/screenshots/screenshot1.png)
 ![alt text](https://raw.githubusercontent.com/moebiussurfing/ofxColorQuantizer/master/screenshots/screenshot2.png)
+![alt text](https://raw.githubusercontent.com/moebiussurfing/ofxColorQuantizer/master/screenshots/screenshot3.png)
 
 ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 
