--- a/README
+++ b/README
@@ -1,8 +1,10 @@
-added example-weights
+added example-weights by stc
 from the stc user fork: https://github.com/stc/ofxColorQuantizer/
 This example can sort colors weighted based on their areas, their order is based on their chroma values.
 
-added example-weights2
+/-
+
+added example-weights2 by moebiussurfing
 This current fork has another example that can sort by Hue, Saturation, Brightness or the above one method.
 It has a gui too to change the number of colors, the sorting type, rebuild when changing number of colors... on the fly.
 There's some image loading from url too.
