--- a/README
+++ b/README
@@ -1,17 +1,27 @@
-added example-weights by stc
-from the stc user fork: https://github.com/stc/ofxColorQuantizer/
-This example can sort colors weighted based on their areas, their order is based on their chroma values.
+* added example-weights and ColorConverter.h by stc
+copied from the stc user fork: https://github.com/stc/ofxColorQuantizer/
+This example can get colors weighted based on their areas, their order is based on their chroma values.
+
 
 /-
 
-added example-weights2 by moebiussurfing
-This current fork has another example that can sort by Hue, Saturation, Brightness or the above one method.
-It has a gui too to change the number of colors, the sorting type, rebuild when changing number of colors... on the fly.
+* added example-weights2 by moebiussurfing
+This current fork has another example that can sort by Hue, Saturation, Brightness or the above method.
+It has a gui panel too to change the number of colors, the sorting type, rebuild when changing number of colors... on the fly.
 There's some image loading from url too.
 
 ![alt text](https://raw.githubusercontent.com/moebiussurfing/ofxColorQuantizer/master/screenshots/screenshot1.png)
 ![alt text](https://raw.githubusercontent.com/moebiussurfing/ofxColorQuantizer/master/screenshots/screenshot2.png)
 ![alt text](https://raw.githubusercontent.com/moebiussurfing/ofxColorQuantizer/master/screenshots/screenshot3.png)
+
+TODO:
+-drag and drop image files to process
+-threaded image load
+-use some http API to searching and image browsing
+-speed up process or downsize image to process 
+
+/-
+
 
 ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 
